--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,5 +10,12 @@ macroquad = "0.3.6"
 rapier2d-f64 = "0.9"
 crossbeam = "0.8"
 
+[dev-dependencies]
+criterion = { version = "0.3", features = ["html_reports"] }
+
 [profile.dev.package.'*']
 opt-level = 3
+
+[[bench]]
+name = "bullets"
+harness = false
