--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2018"
 macroquad = "0.3.6"
 rapier2d-f64 = "0.9"
 crossbeam = "0.8"
+oorandom = "11.1.3"
 
 [dev-dependencies]
 criterion = { version = "0.3", features = ["html_reports"] }
