--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,17 @@ macroquad = "0.3.6"
 rapier2d-f64 = "0.9"
 crossbeam = "0.8"
 oorandom = "11.1.3"
+wasm-bindgen = "0.2.74"
+
+[dependencies.web-sys]
+version = "0.3.4"
+features = [
+  'Document',
+  'Element',
+  'HtmlElement',
+  'Node',
+  'Window',
+]
 
 [dev-dependencies]
 criterion = { version = "0.3", features = ["html_reports"] }
