--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ rapier2d-f64 = "0.9"
 crossbeam = "0.8"
 oorandom = "11.1.3"
 wasm-bindgen = "0.2.74"
+js-sys = "0.3.51"
 
 [dependencies.web-sys]
 version = "0.3.4"
@@ -18,8 +19,13 @@ features = [
   'Document',
   'Element',
   'HtmlElement',
+  'HtmlCanvasElement',
   'Node',
   'Window',
+  'WebGlBuffer',
+  'WebGlProgram',
+  'WebGlRenderingContext',
+  'WebGlShader',
 ]
 
 [dev-dependencies]
