--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,8 @@ crossbeam = "0.8"
 oorandom = "11.1.3"
 wasm-bindgen = "0.2.74"
 js-sys = "0.3.51"
+nalgebra = "0.27.1"
+console_error_panic_hook = "0.1.6"
 
 [dependencies.web-sys]
 version = "0.3.4"
@@ -26,6 +28,7 @@ features = [
   'WebGlProgram',
   'WebGlRenderingContext',
   'WebGlShader',
+  'WebGlUniformLocation',
 ]
 
 [dev-dependencies]
