--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,8 @@ wasm-bindgen = "0.2.74"
 js-sys = "0.3.51"
 nalgebra = "0.27.1"
 console_error_panic_hook = "0.1.6"
+rand = "*"
+getrandom = { version = "0.2", features = ["js"] }
 
 [dependencies.web-sys]
 version = "0.3.4"
