replace macroquad::time with instant

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ nalgebra = "0.27.1"
 console_error_panic_hook = "0.1.6"
 rand = "*"
 getrandom = { version = "0.2", features = ["js"] }
+instant = "0.1"
 
 [dependencies.web-sys]
 version = "0.3.4"
