remove use of macroquad::input

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,8 @@ features = [
   'WebGlRenderingContext',
   'WebGlShader',
   'WebGlUniformLocation',
+  'KeyboardEvent',
+  'console',
 ]
 
 [dev-dependencies]
