--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,6 +43,10 @@ criterion = { version = "0.3", features = ["html_reports"] }
 [profile.dev.package.'*']
 opt-level = 3
 
+[package.metadata.wasm-pack.profile.profiling]
+debug = 1
+wasm-opt = false
+
 [[bench]]
 name = "bullets"
 harness = false
