renderer: switch to webgl2

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,7 @@ features = [
   'Window',
   'WebGlBuffer',
   'WebGlProgram',
-  'WebGlRenderingContext',
+  'WebGl2RenderingContext',
   'WebGlShader',
   'WebGlUniformLocation',
   'KeyboardEvent',
