--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,8 @@ rand = "*"
 getrandom = { version = "0.2", features = ["js"] }
 instant = { version = "0.1", features = ["wasm-bindgen"] }
 lazy_static = "*"
+console_log = "0.2.0"
+log = "0.4"
 
 [dependencies.web-sys]
 version = "0.3.4"
