--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ instant = { version = "0.1", features = ["wasm-bindgen"] }
 lazy_static = "*"
 console_log = "0.2.0"
 log = "0.4"
+rhai = { version = "1.0", features = [] }
 
 [dependencies.web-sys]
 version = "0.3.4"
