--- a/www/package.json
+++ b/www/package.json
@@ -1,14 +1,19 @@
 {
   "scripts": {
     "build": "webpack",
-    "serve": "webpack-dev-server"
+    "serve": "webpack serve"
   },
   "devDependencies": {
-    "@wasm-tool/wasm-pack-plugin": "1.0.1",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.3.2",
+    "monaco-editor": "^0.25.2",
+    "monaco-editor-webpack-plugin": "^4.0.0",
     "text-encoding": "^0.7.0",
-    "html-webpack-plugin": "^3.2.0",
-    "webpack": "^4.29.4",
-    "webpack-cli": "^3.1.1",
+    "@wasm-tool/wasm-pack-plugin": "^1.4.0",
+    "webpack": "^5.44.0",
+    "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.1.0"
+  },
+  "dependencies": {
   }
 }
