--- a/www/package.json
+++ b/www/package.json
@@ -4,15 +4,17 @@
     "serve": "webpack serve"
   },
   "devDependencies": {
+    "@wasm-tool/wasm-pack-plugin": "^1.4.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
     "monaco-editor": "^0.25.2",
     "monaco-editor-webpack-plugin": "^4.0.0",
     "text-encoding": "^0.7.0",
-    "@wasm-tool/wasm-pack-plugin": "^1.4.0",
     "webpack": "^5.44.0",
     "webpack-cli": "^4.7.2",
-    "webpack-dev-server": "^3.1.0"
+    "webpack-dev-server": "^3.1.0",
+    "css-loader": "^5.2.6",
+    "style-loader": "^3.0.0"
   },
   "dependencies": {
   }
