--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,8 @@ lazy_static = "*"
 console_log = "0.2.0"
 log = "0.4"
 rhai = { version = "1.0", features = [] }
+test-env-log = "0.2"
+env_logger = "0.9"
 
 [dependencies.web-sys]
 version = "0.3.4"
