--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,9 +20,10 @@ instant = { version = "0.1", features = ["wasm-bindgen"] }
 lazy_static = "*"
 console_log = "0.2.0"
 log = "0.4"
-rhai = { version = "1.0", features = [] }
+rhai = { version = "1.0", features = ["internals"] }
 test-env-log = "0.2"
 env_logger = "0.9"
+smartstring = "0.2"
 
 [dependencies.web-sys]
 version = "0.3.4"
