--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,8 @@ rhai = { version = "1.0", features = ["internals"] }
 test-env-log = "0.2"
 env_logger = "0.9"
 smartstring = "0.2"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 
 [dependencies.web-sys]
 version = "0.3.4"
