--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,8 @@ env_logger = "0.9"
 smartstring = "0.2"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+no-comment = "0.0.3"
+flate2 = "1.0.20"
 
 [dependencies.web-sys]
 version = "0.3.4"
