--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,8 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 no-comment = "0.0.3"
 flate2 = "1.0.20"
+rbtag = "0.3.0"
+chrono = "0.4"
 
 [dependencies.web-sys]
 version = "0.3.4"
