--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,9 @@ no-comment = "0.0.3"
 flate2 = "1.0.20"
 rbtag = "0.3.0"
 chrono = "0.4"
+petname = "1.1.0"
+rand_chacha = "0.3.1"
+rand_seeder = "0.2.2"
 
 [dependencies.web-sys]
 version = "0.3.4"
