--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ crate-type = ["cdylib", "rlib"]
 rapier2d-f64 = { version = "0.9", features = ["wasm-bindgen"] }
 crossbeam = "0.8"
 oorandom = "11.1.3"
-wasm-bindgen = "0.2.74"
+wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
 js-sys = "0.3.51"
 nalgebra = "0.27.1"
 console_error_panic_hook = "0.1.6"
@@ -33,6 +33,7 @@ chrono = "0.4"
 petname = "1.1.0"
 rand_chacha = "0.3.1"
 rand_seeder = "0.2.2"
+regex = "1.5"
 
 [dependencies.web-sys]
 version = "0.3.4"
