--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,10 @@
 name = "oort"
 version = "0.1.0"
 edition = "2018"
+authors = ["Rich Lane"]
+description = "A space fleet programming game."
+license = "GPL-3.0-or-later"
+repository = "http://github.com/rlane/oort3"
 
 [lib]
 crate-type = ["cdylib", "rlib"]
