--- a/www/package.json
+++ b/www/package.json
@@ -8,6 +8,7 @@
     "css-loader": "^5.2.6",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
+    "license-ls": "^1.5.0",
     "mini-css-extract-plugin": "^2.1.0",
     "monaco-editor": "^0.25.2",
     "monaco-editor-webpack-plugin": "^4.0.0",
