--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,7 @@ petname = "1.1.0"
 rand_chacha = "0.3.1"
 rand_seeder = "0.2.2"
 regex = "1.5"
+rayon = "1.5"
 
 [dependencies.web-sys]
 version = "0.3.4"
