--- a/Cargo.toml
+++ b/Cargo.toml
@@ -70,6 +70,12 @@ opt-level = 3
 debug = 1
 wasm-opt = false
 
+[profile.release]
+debug = true
+
+[profile.bench]
+debug = true
+
 [[bench]]
 name = "bullets"
 harness = false
