--- a/www/package.json
+++ b/www/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
-    "build": "webpack",
-    "serve": "webpack serve"
+    "build": "webpack --config webpack.prod.js",
+    "serve": "webpack serve --config webpack.dev.js"
   },
   "devDependencies": {
     "@wasm-tool/wasm-pack-plugin": "^1.5.0",
@@ -16,7 +16,7 @@
     "text-encoding": "^0.7.0",
     "webpack": "^5.46.0",
     "webpack-cli": "^4.7.2",
-    "webpack-dev-server": "^3.1.0"
-  },
-  "dependencies": {}
+    "webpack-dev-server": "^3.1.0",
+    "webpack-merge": "^5.8.0"
+  }
 }
