--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ crossbeam = "0.8"
 oorandom = "11.1.3"
 wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
 js-sys = "0.3.51"
-nalgebra = "0.28"
+nalgebra = { version = "0.28", features = ["serde-serialize"] }
 console_error_panic_hook = "0.1.6"
 rand = "*"
 getrandom = { version = "0.2", features = ["js"] }
