--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,7 @@ rand_chacha = "0.3.1"
 rand_seeder = "0.2.2"
 regex = "1.5"
 bincode = "1.3"
+memoffset = "0.6"
 
 [dependencies.web-sys]
 version = "0.3.4"
