--- a/www/package.json
+++ b/www/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
-    "build": "webpack --config webpack.prod.js",
-    "serve": "webpack serve --config webpack.dev.js"
+    "build": "webpack --mode=production",
+    "serve": "webpack serve --mode=development"
   },
   "devDependencies": {
     "@wasm-tool/wasm-pack-plugin": "^1.5.0",
