--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,7 @@ rand_seeder = "0.2.2"
 regex = "1.5"
 bincode = "1.3"
 memoffset = "0.6"
+rand_distr = "0.4.1"
 
 [dependencies.web-sys]
 version = "0.3.4"
