--- a/www/package.json
+++ b/www/package.json
@@ -7,7 +7,9 @@
     "@wasm-tool/wasm-pack-plugin": "^1.5.0",
     "css-loader": "^6.2.0",
     "file-loader": "^6.2.0",
+    "firebase-admin": "^9.11.0",
     "html-webpack-plugin": "^5.3.2",
+    "inotify": "git+https://github.com/c4milo/node-inotify.git",
     "license-ls": "^1.5.0",
     "mini-css-extract-plugin": "^2.1.0",
     "monaco-editor": "^0.26.1",
