speed up release builds by disabling wasm-opt

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -80,6 +80,9 @@ lto = true
 debug = true
 lto = false
 
+[package.metadata.wasm-pack.profile.release]
+wasm-opt = false
+
 [[bench]]
 name = "bullets"
 harness = false
