--- a/www/package.json
+++ b/www/package.json
@@ -5,6 +5,7 @@
     "css-loader": "^6.2.0",
     "file-loader": "^6.2.0",
     "firebase-admin": "^9.11.0",
+    "firebase-functions": "^3.14.1",
     "firebase-tools": "^9.16.0",
     "html-webpack-plugin": "^5.3.2",
     "inotify": "git+https://github.com/c4milo/node-inotify.git",
