--- a/backend/functions/package.json
+++ b/backend/functions/package.json
@@ -7,7 +7,8 @@
     "shell": "npm run build && firebase functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
-    "logs": "firebase functions:log"
+    "logs": "firebase functions:log",
+    "test": "firebase emulators:start --only firestore >/dev/null & trap \"kill $!; wait\" exit; ts-mocha --ui tdd test/*.ts"
   },
   "engines": {
     "node": "14"
@@ -18,12 +19,22 @@
     "firebase-functions": "^3.14.1"
   },
   "devDependencies": {
+    "@types/chai": "^4.2.21",
+    "@types/expect": "^24.3.0",
+    "@types/mocha": "^9.0.0",
+    "@types/sinon": "^10.0.2",
     "@typescript-eslint/eslint-plugin": "^3.9.1",
     "@typescript-eslint/parser": "^3.8.0",
+    "chai": "^4.3.4",
     "eslint": "^7.6.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-import": "^2.22.0",
-    "firebase-functions-test": "^0.2.0",
+    "express": "^4.17.1",
+    "firebase-functions-test": "^0.2.3",
+    "firebase-tools": "^9.16.2",
+    "mocha": "^9.0.3",
+    "sinon": "^11.1.2",
+    "ts-mocha": "^8.0.0",
     "typescript": "^3.8.0"
   },
   "private": true
