backend: use a different port for the firestore emulator

--- a/backend/firebase.json
+++ b/backend/firebase.json
@@ -16,5 +16,10 @@
       "npm --prefix \"$RESOURCE_DIR\" run lint",
       "npm --prefix \"$RESOURCE_DIR\" run build"
     ]
+  },
+  "emulators": {
+    "firestore": {
+      "port": "8084"
+    }
   }
 }
