--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,6 +39,8 @@ regex = "1.5"
 bincode = "1.3"
 memoffset = "0.6"
 rand_distr = "0.4.1"
+serde-wasm-bindgen = "0.3"
+serde_bytes = "0.11"
 
 [dependencies.web-sys]
 version = "0.3.4"
