--- a/yew/Cargo.toml
+++ b/yew/Cargo.toml
@@ -3,7 +3,8 @@ name = "oort-app"
 version = "0.1.0"
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lib]
+crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 bincode = "1.3"
