--- a/yew/Cargo.toml
+++ b/yew/Cargo.toml
@@ -34,6 +34,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde-wasm-bindgen = "0.3"
 wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
 yew = "0.18"
+anyhow = "1.0"
 
 [dependencies.web-sys]
 version = "0.3.4"
