--- a/yew/Cargo.toml
+++ b/yew/Cargo.toml
@@ -21,6 +21,7 @@ nalgebra = { version = "0.28", features = ["serde-serialize"] }
 no-comment = "0.0.3"
 oort_renderer = { path = "../renderer" }
 oort_simulator = { path = "../simulator" }
+oort_sim_agent = { path = "../sim_agent" }
 petname = "1.1.0"
 rand = "*"
 rand_chacha = "0.3.1"
@@ -33,8 +34,13 @@ serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 serde-wasm-bindgen = "0.3"
 wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
-yew = "0.18"
+yew = "0.19"
+yew-agent = "0.1"
 anyhow = "1.0"
+gloo-render = "*"
+reqwasm = "0.2"
+wasm-bindgen-futures = "0.4"
+monaco = { version = "0.3", features = ["yew-components"] }
 
 [dependencies.web-sys]
 version = "0.3.4"
@@ -55,4 +61,6 @@ features = [
   'Storage',
   'WheelEvent',
   'MouseEvent',
+  'Request',
+  'EventTarget',
 ]
