--- a/simulator/Cargo.toml
+++ b/simulator/Cargo.toml
@@ -35,7 +35,7 @@ wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
 bincode = "1.3"
 rayon = "1.5"
 criterion = { version = "0.3", features = ["html_reports"] }
-test-env-log = "0.2"
+test-log = "0.2"
 env_logger = "0.9"
 
 [[bench]]
