--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,9 @@ yew-agent = { git = "https://github.com/yewstack/yew", rev = "6f6519dab4c5990029
 [profile.dev.package.'*']
 opt-level = 3
 
+[profile.dev.package.oort_renderer]
+opt-level = 1
+
 [profile.dev]
 opt-level = 0
 
