--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -7,40 +7,40 @@ edition = "2021"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-bincode = "1.3"
-chrono = "0.4"
-console_error_panic_hook = "0.1.6"
+bincode = "1.3.3"
+chrono = "0.4.19"
+console_error_panic_hook = "0.1.7"
 console_log = "0.2.0"
-flate2 = "1.0.20"
-getrandom = { version = "0.2", features = ["js"] }
-instant = { version = "0.1", features = ["wasm-bindgen"] }
-js-sys = "0.3.51"
-log = "0.4"
-memoffset = "0.6"
-nalgebra = { version = "0.28", features = ["serde-serialize"] }
+flate2 = "1.0.24"
+getrandom = { version = "0.2.6", features = ["js"] }
+instant = { version = "0.1.12", features = ["wasm-bindgen"] }
+js-sys = "0.3.57"
+log = "0.4.17"
+memoffset = "0.6.5"
+nalgebra = { version = "0.28.0", features = ["serde-serialize"] }
 no-comment = "0.0.3"
 oort_renderer = { path = "../renderer" }
 oort_simulator = { path = "../simulator" }
 oort_worker = { path = "../worker" }
-petname = "1.1.0"
-rand = "*"
+petname = "1.1.2"
+rand = "0.8.5"
 rand_chacha = "0.3.1"
-rand_seeder = "0.2.2"
+rand_seeder = "0.2.3"
 rbtag = "0.3.0"
-regex = "1.5"
-serde_json = "1.0"
-serde = { version = "1.0", features = ["derive"] }
-wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
-yew = "0.19"
-yew-agent = "0.1"
-anyhow = "1.0"
-gloo-render = "*"
-reqwasm = "0.2"
-wasm-bindgen-futures = "0.4"
-monaco = { version = "0.3", features = ["yew-components"] }
+regex = "1.5.6"
+serde_json = "1.0.81"
+serde = { version = "1.0.137", features = ["derive"] }
+wasm-bindgen = { version = "0.2.80", features = ["serde-serialize"] }
+yew = "0.19.3"
+yew-agent = "0.1.0"
+anyhow = "1.0.57"
+gloo-render = "0.1.1"
+reqwasm = "0.5.0"
+wasm-bindgen-futures = "0.4.30"
+monaco = { version = "0.3.0", features = ["yew-components"] }
 
 [dependencies.web-sys]
-version = "0.3.4"
+version = "0.3.57"
 features = [
   'Document',
   'Element',
