--- a/renderer/Cargo.toml
+++ b/renderer/Cargo.toml
@@ -7,23 +7,23 @@ edition = "2021"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-getrandom = { version = "0.2", features = ["js"] }
-instant = { version = "0.1", features = ["wasm-bindgen"] }
-js-sys = "0.3.51"
-log = "0.4"
-memoffset = "0.6"
-nalgebra = { version = "0.28", features = ["serde-serialize"] }
+getrandom = { version = "0.2.6", features = ["js"] }
+instant = { version = "0.1.12", features = ["wasm-bindgen"] }
+js-sys = "0.3.57"
+log = "0.4.17"
+memoffset = "0.6.5"
+nalgebra = { version = "0.28.0", features = ["serde-serialize"] }
 oort_simulator = { path = "../simulator" }
-rand = "*"
+rand = "0.8.5"
 rand_chacha = "0.3.1"
-rand_seeder = "0.2.2"
-regex = "1.5"
-serde_json = "1.0"
-serde = { version = "1.0", features = ["derive"] }
-wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
+rand_seeder = "0.2.3"
+regex = "1.5.6"
+serde_json = "1.0.81"
+serde = { version = "1.0.137", features = ["derive"] }
+wasm-bindgen = { version = "0.2.80", features = ["serde-serialize"] }
 
 [dependencies.web-sys]
-version = "0.3.4"
+version = "0.3.57"
 features = [
   'Document',
   'Element',
