--- a/simulator/Cargo.toml
+++ b/simulator/Cargo.toml
@@ -11,30 +11,30 @@ repository = "http://github.com/rlane/oort3"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-crossbeam = "0.8"
-getrandom = { version = "0.2", features = ["js"] }
-instant = { version = "0.1", features = ["wasm-bindgen"] }
-lazy_static = "*"
-log = "0.4"
-nalgebra = { version = "0.28", features = ["serde-serialize"] }
+crossbeam = "0.8.1"
+getrandom = { version = "0.2.6", features = ["js"] }
+instant = { version = "0.1.12", features = ["wasm-bindgen"] }
+lazy_static = "1.4.0"
+log = "0.4.17"
+nalgebra = { version = "0.28.0", features = ["serde-serialize"] }
 oorandom = "11.1.3"
-rand = "*"
+rand = "0.8.5"
 rand_chacha = "0.3.1"
-rand_distr = "0.4.1"
-rand_seeder = "0.2.2"
-rapier2d-f64 = { version = "0.10", features = ["wasm-bindgen"] }
-regex = "1.5"
-rhai = { version = "~1.7", features = ["internals"] }
-serde = { version = "1.0", features = ["derive"] }
-smartstring = "0.2"
+rand_distr = "0.4.3"
+rand_seeder = "0.2.3"
+rapier2d-f64 = { version = "0.10.0", features = ["wasm-bindgen"] }
+regex = "1.5.6"
+rhai = { version = "1.7.0", features = ["internals"] }
+serde = { version = "1.0.137", features = ["derive"] }
+smartstring = "1.0.1"
 
 [dev-dependencies]
-bincode = "1.3"
-rayon = "1.5"
-criterion = { version = "0.3", features = ["html_reports"] }
-test-log = "0.2"
-env_logger = "0.9"
-serde_json = "1.0"
+bincode = "1.3.3"
+rayon = "1.5.3"
+criterion = { version = "0.3.5", features = ["html_reports"] }
+test-log = "0.2.10"
+env_logger = "0.9.0"
+serde_json = "1.0.81"
 
 [[bench]]
 name = "bullets"
