--- a/simulator/Cargo.toml
+++ b/simulator/Cargo.toml
@@ -26,6 +26,7 @@ regex = "1.5.6"
 rhai = { version = "1.7.0", features = ["internals"] }
 serde = { version = "1.0.137", features = ["derive"] }
 smartstring = "1.0.1"
+instant = "0.1.12"
 
 [dev-dependencies]
 bincode = "1.3.3"
