--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -38,6 +38,7 @@ reqwasm = "0.5.0"
 wasm-bindgen-futures = "0.4.30"
 monaco = { version = "0.3.0", features = ["yew-components"] }
 yew-router = "0.16"
+sha2 = "0.10.2"
 
 [dependencies.web-sys]
 version = "0.3.57"
