--- a/simulator/Cargo.toml
+++ b/simulator/Cargo.toml
@@ -28,6 +28,11 @@ serde = { version = "1.0.137", features = ["derive"] }
 smartstring = "1.0.1"
 instant = "0.1.12"
 
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+js-sys = "0.3.57"
+wasm-bindgen = "0.2"
+wasm-bindgen-futures = "0.4.30"
+
 [dev-dependencies]
 bincode = "1.3.3"
 rayon = "1.5.3"
