--- a/simulator/Cargo.toml
+++ b/simulator/Cargo.toml
@@ -32,6 +32,7 @@ instant = "0.1.12"
 js-sys = "0.3.57"
 wasm-bindgen = "0.2"
 wasm-bindgen-futures = "0.4.30"
+wasmer = { version = "2.3.0", features = ["js", "wat", "std"], default-features = false }
 
 [dev-dependencies]
 bincode = "1.3.3"
