--- a/shared/Cargo.toml
+++ b/shared/Cargo.toml
@@ -1,14 +1,8 @@
 [package]
-name = "oort_reference_ai"
+name = "oort_shared"
 version = "0.1.0"
 edition = "2021"
 authors = ["Rich Lane"]
 description = "A space fleet programming game."
 license = "GPL-3.0-or-later"
 repository = "http://github.com/rlane/oort3"
-
-[lib]
-crate-type = ["cdylib"]
-
-[dependencies]
-oort_shared = { path = "../shared" }
