--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -2,7 +2,12 @@
 name = "oort_server"
 version = "0.0.0"
 publish = false
+edition = "2021"
 
 [dependencies]
-hyper = "0.12.3"
+salvo = "0.25"
+tokio = { version = "1", features = ["macros"] }
 pretty_env_logger = "0.2.3"
+anyhow = "1.0"
+bytes = "1.1"
+log = "0.4.17"
