--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 [dependencies]
 salvo = "0.25"
 tokio = { version = "1", features = ["macros", "process"] }
-pretty_env_logger = "0.2.3"
 anyhow = "1.0"
 bytes = "1.1"
 log = "0.4.17"
+env_logger = "0.9.0"
