--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -10,4 +10,4 @@ tokio = { version = "1", features = ["macros", "process"] }
 anyhow = "1.0"
 bytes = "1.1"
 log = "0.4.17"
-env_logger = "0.9.0"
+stackdriver_logger = "0.8.0"
