--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 
 [dependencies]
 salvo = "0.25"
+salvo_extra = { version="0.25", features=["cors"] }
 tokio = { version = "1", features = ["macros", "process"] }
 anyhow = "1.0"
 bytes = "1.1"
