--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -20,7 +20,7 @@ memoffset = "0.6.5"
 nalgebra = { version = "0.31.0", features = ["serde-serialize"] }
 no-comment = "0.0.3"
 oort_renderer = { path = "../renderer" }
-oort_simulator = { path = "../simulator" }
+oort_simulator = { path = "../simulator", features = ["js"], default-features = false }
 oort_worker = { path = "../worker" }
 petname = "1.1.2"
 rand = "0.8.5"
