--- a/renderer/Cargo.toml
+++ b/renderer/Cargo.toml
@@ -13,7 +13,7 @@ js-sys = "0.3.57"
 log = "0.4.17"
 memoffset = "0.6.5"
 nalgebra = { version = "0.31.0", features = ["serde-serialize"] }
-oort_simulator = { path = "../simulator" }
+oort_simulator = { path = "../simulator", features = ["js"], default-features = false }
 rand = "0.8.5"
 rand_chacha = "0.3.1"
 rand_seeder = "0.2.3"
