--- a/simulator/Cargo.toml
+++ b/simulator/Cargo.toml
@@ -29,11 +29,14 @@ smartstring = "1.0.1"
 instant = "0.1.12"
 oort_shared = { path = "../shared" }
 
+[target.'cfg(target_arch = "x86_64")'.dependencies]
+wasmer = { version = "2.3.0", default-features = false }
+
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 js-sys = "0.3.57"
 wasm-bindgen = "0.2"
 wasm-bindgen-futures = "0.4.30"
-wasmer = { version = "2.3.0", features = ["js", "wat", "std"], default-features = false }
+wasmer = { version = "2.3.0", default-features = false }
 
 [dev-dependencies]
 bincode = "1.3.3"
@@ -42,6 +45,11 @@ criterion = { version = "0.3.5", features = ["html_reports"] }
 test-log = "0.2.10"
 env_logger = "0.9.0"
 serde_json = "1.0.81"
+
+[features]
+default = ["sys"]
+sys = ["wasmer/sys", "wasmer/wat", "wasmer/std", "wasmer/default-singlepass", "wasmer/default-universal"]
+js = ["wasmer/js", "wasmer/wat", "wasmer/std"]
 
 [[bench]]
 name = "bullets"
