--- a/simulator/Cargo.toml
+++ b/simulator/Cargo.toml
@@ -28,15 +28,16 @@ serde = { version = "1.0.137", features = ["derive"] }
 smartstring = "1.0.1"
 instant = "0.1.12"
 oort_shared = { path = "../shared" }
+wasmer = { version = "2.3.0", default-features = false }
+wasmer-compiler = { version = "2.3.0", features = ["universal_engine"] }
+wasmer-compiler-cranelift = { version = "2.3.0" }
 
 [target.'cfg(target_arch = "x86_64")'.dependencies]
-wasmer = { version = "2.3.0", default-features = false }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 js-sys = "0.3.57"
 wasm-bindgen = "0.2"
 wasm-bindgen-futures = "0.4.30"
-wasmer = { version = "2.3.0", default-features = false }
 
 [dev-dependencies]
 bincode = "1.3.3"
@@ -48,7 +49,7 @@ serde_json = "1.0.81"
 
 [features]
 default = ["sys"]
-sys = ["wasmer/sys", "wasmer/wat", "wasmer/std", "wasmer/default-singlepass", "wasmer/default-universal"]
+sys = ["wasmer/sys-default"]
 js = ["wasmer/js", "wasmer/wat", "wasmer/std"]
 
 [[bench]]
