factor out oort_api crate

--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "oort_ai"
+name = "oort_api"
 version = "0.1.0"
 edition = "2021"
 authors = ["Rich Lane"]
@@ -7,10 +7,6 @@ description = "A space fleet programming game."
 license = "GPL-3.0-or-later"
 repository = "http://github.com/rlane/oort3"
 
-[lib]
-crate-type = ["cdylib"]
-
 [dependencies]
 oort_shared = { path = "../shared" }
-oort_api = { path = "../api" }
 oorandom = "11.1.3"
