--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -16,6 +16,7 @@ COPY scripts/build-ai.sh scripts/build-ai-fast.sh scripts/
 COPY --from=builder /registry /usr/local/cargo/registry
 COPY --from=builder /usr/local/cargo/bin/oort_server /usr/local/bin/oort_server
 COPY ai ai
+COPY api api
 COPY shared shared
 RUN cargo fetch
 RUN ./scripts/build-ai.sh
