--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -3,7 +3,7 @@ name = "oort_api"
 version = "0.1.0"
 edition = "2021"
 authors = ["Rich Lane"]
-description = "A space fleet programming game."
+description = "APIs for Oort, a space fleet programming game."
 license = "GPL-3.0-or-later"
 repository = "http://github.com/rlane/oort3"
 
