--- a/worker/Cargo.toml
+++ b/worker/Cargo.toml
@@ -2,6 +2,7 @@
 name = "oort_worker"
 version = "0.2.1"
 edition = "2021"
+publish = false
 
 [dependencies]
 oort_simulator = { path = "../simulator", features = ["js"], default-features = false }
