patch rand_seeder to fix outdated rand_core dependency

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ yew-agent = { git = "https://github.com/yewstack/yew", rev = "6f6519dab4c5990029
 wasmer = { git = "https://github.com/wasmerio/wasmer", rev = "a3daf3d1130be9b04d95911f28efd56ad23ad3eb" }
 wasmer-compiler = { git = "https://github.com/wasmerio/wasmer", rev = "a3daf3d1130be9b04d95911f28efd56ad23ad3eb" }
 wasmer-compiler-cranelift = { git = "https://github.com/wasmerio/wasmer", rev = "a3daf3d1130be9b04d95911f28efd56ad23ad3eb" }
+rand_seeder = { git = "https://github.com/rlane/seeder", rev = "c39e58447f7c236fb98579a5d46e5668b92a3245" }
 
 [profile.dev.package.'*']
 opt-level = 3
