--- a/tools/Cargo.toml
+++ b/tools/Cargo.toml
@@ -17,3 +17,5 @@ rayon = "1.5.3"
 serde_json ="*"
 chrono = "0.4.22"
 clap = { version = "3.2.22", features = ["derive"] }
+skillratings = "0.12.0"
+itertools = "0.10.5"
