--- a/tools/Cargo.toml
+++ b/tools/Cargo.toml
@@ -19,3 +19,4 @@ chrono = "0.4.22"
 clap = { version = "3.2.22", features = ["derive"] }
 skillratings = "0.12.0"
 itertools = "0.10.5"
+comfy-table = "6.1.0"
