--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -43,6 +43,8 @@ monaco = { version = "0.3.0", features = ["yew-components"] }
 yew-router = "0.16"
 sha2 = "0.10.2"
 qstring = "0.7.2"
+prettyplease = "0.1"
+syn = { version = "1", default-features = false, features = ["full", "parsing"] }
 
 [dependencies.web-sys]
 version = "0.3.57"
