app: update to yew f82af86

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,8 +15,9 @@ members = [
 ]
 
 [patch.crates-io]
-yew = { git = "https://github.com/yewstack/yew", rev = "6f6519dab4c5990029fe8d85c47daf439fdc3988" }
-yew-agent = { git = "https://github.com/yewstack/yew", rev = "6f6519dab4c5990029fe8d85c47daf439fdc3988" }
+yew = { git = "https://github.com/yewstack/yew", rev = "f82af86" }
+yew-agent = { git = "https://github.com/yewstack/yew", rev = "f82af86" }
+yew-router = { git = "https://github.com/yewstack/yew", rev = "f82af86" }
 wasmer = { git = "https://github.com/wasmerio/wasmer", rev = "a3daf3d1130be9b04d95911f28efd56ad23ad3eb" }
 wasmer-compiler = { git = "https://github.com/wasmerio/wasmer", rev = "a3daf3d1130be9b04d95911f28efd56ad23ad3eb" }
 wasmer-compiler-cranelift = { git = "https://github.com/wasmerio/wasmer", rev = "a3daf3d1130be9b04d95911f28efd56ad23ad3eb" }
