--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -34,7 +34,7 @@ regex = "1.5.6"
 serde_json = "1.0.81"
 serde = { version = "1.0.137", features = ["derive"] }
 wasm-bindgen = { version = "0.2.80", features = ["serde-serialize"] }
-yew = "0.19.3"
+yew = { version = "0.19.3", features = ["csr"] }
 yew-agent = "0.1.0"
 gloo-render = "0.1.1"
 reqwasm = "0.5.0"
