--- a/services/compiler/Dockerfile
+++ b/services/compiler/Dockerfile
@@ -5,7 +5,7 @@ RUN \
   --mount=type=cache,target=/usr/local/cargo/registry \
   --mount=type=cache,target=/usr/local/cargo/git \
   --mount=type=cache,target=/usr/src/app/target \
-  cd server && cargo install --locked --path . && cp -a /usr/local/cargo/registry /registry
+  cd services/compiler && cargo install --locked --path . && cp -a /usr/local/cargo/registry /registry
 
 FROM rust:1.61-slim-buster
 RUN rustup target add wasm32-unknown-unknown
@@ -14,7 +14,7 @@ COPY Cargo.toml.user Cargo.toml
 COPY Cargo.lock.user Cargo.lock
 COPY scripts/build-ai.sh scripts/build-ai-fast.sh scripts/
 COPY --from=builder /registry /usr/local/cargo/registry
-COPY --from=builder /usr/local/cargo/bin/oort_server /usr/local/bin/oort_server
+COPY --from=builder /usr/local/cargo/bin/oort_compiler_service /usr/local/bin/oort_compiler_service
 COPY ai ai
 COPY api api
 COPY shared shared
@@ -22,4 +22,4 @@ RUN cargo fetch
 RUN ./scripts/build-ai.sh
 ENV PORT 8080
 ENV RUST_LOG info
-CMD ["oort_server"]
+CMD ["oort_compiler_service"]
