--- a/tools/Cargo.toml
+++ b/tools/Cargo.toml
@@ -14,7 +14,7 @@ env_logger = "0.9.0"
 reqwest = "0.11.11"
 oort_simulator = { path = "../simulator" }
 rayon = "1.5.3"
-serde_json ="*"
+serde_json = "1.0"
 chrono = "0.4.22"
 clap = { version = "3.2.22", features = ["derive"] }
 skillratings = "0.12.0"
