factor out telemetry structs

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ members = [
     "api",
     "tools",
     "analyzer",
+    "telemetry_proto",
     "services/compiler",
     "services/telemetry",
 ]
