--- a/services/telemetry/Cargo.toml
+++ b/services/telemetry/Cargo.toml
@@ -17,3 +17,4 @@ gcloud-sdk = "0.18.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json ="1.0"
 rand = "0.8.5"
+oort_telemetry_proto = { path = "../../telemetry_proto" }
