--- a/frontend/renderer/Cargo.toml
+++ b/frontend/renderer/Cargo.toml
@@ -8,13 +8,13 @@ publish = false
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
+oort_simulator = { path = "../../simulator", features = ["js"], default-features = false }
 getrandom = { version = "0.2.6", features = ["js"] }
 instant = { version = "0.1.12", features = ["wasm-bindgen"] }
 js-sys = "0.3.57"
 log = "0.4.17"
 memoffset = "0.6.5"
 nalgebra = { version = "0.31.0", features = ["serde-serialize"] }
-oort_simulator = { path = "../simulator", features = ["js"], default-features = false }
 rand = "0.8.5"
 rand_chacha = "0.3.1"
 rand_seeder = "0.2.3"
