--- a/services/compiler/Dockerfile
+++ b/services/compiler/Dockerfile
@@ -15,8 +15,8 @@ COPY Cargo.lock.user Cargo.lock
 COPY scripts/build-ai.sh scripts/build-ai-fast.sh scripts/
 COPY --from=builder /registry /usr/local/cargo/registry
 COPY --from=builder /usr/local/cargo/bin/oort_compiler_service /usr/local/bin/oort_compiler_service
-COPY ai ai
-COPY api api
+COPY shared/ai ai
+COPY shared/api api
 RUN cargo fetch
 RUN ./scripts/build-ai.sh
 ENV PORT 8080
