--- a/frontend/renderer/Cargo.toml
+++ b/frontend/renderer/Cargo.toml
@@ -8,7 +8,7 @@ publish = false
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-oort_simulator = { path = "../../simulator", features = ["js"], default-features = false }
+oort_simulator = { path = "../../shared/simulator", features = ["js"], default-features = false }
 getrandom = { version = "0.2.6", features = ["js"] }
 instant = { version = "0.1.12", features = ["wasm-bindgen"] }
 js-sys = "0.3.57"
