--- a/services/telemetry/Cargo.toml
+++ b/services/telemetry/Cargo.toml
@@ -5,6 +5,7 @@ publish = false
 edition = "2021"
 
 [dependencies]
+oort_telemetry_proto = { path = "../../shared/telemetry_proto" }
 salvo = "0.36"
 salvo_extra = { version="0.36", features=["cors"] }
 tokio = { version = "1", features = ["macros", "process"] }
@@ -17,4 +18,3 @@ gcloud-sdk = "0.18.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json ="1.0"
 rand = "0.8.5"
-oort_telemetry_proto = { path = "../../telemetry_proto" }
