--- a/shared/simulator/Cargo.toml
+++ b/shared/simulator/Cargo.toml
@@ -48,6 +48,7 @@ criterion = { version = "0.3.5", features = ["html_reports"] }
 test-log = "0.2.10"
 env_logger = "0.9.0"
 serde_json = "1.0.81"
+approx = "0.5.1"
 
 [features]
 default = ["sys"]
