--- a/tools/Cargo.toml
+++ b/tools/Cargo.toml
@@ -22,6 +22,10 @@ clap = { version = "3.2.22", features = ["derive"] }
 skillratings = "0.12.0"
 itertools = "0.10.5"
 comfy-table = "6.1.0"
+petname = "1.1.2"
+rand = "0.8.5"
+rand_chacha = "0.3.1"
+rand_seeder = "0.2.3"
 
 [patch.crates-io]
 wasmer = { git = "https://github.com/wasmerio/wasmer", rev = "a3daf3d1130be9b04d95911f28efd56ad23ad3eb" }
