services: run as non-root users

--- a/services/leaderboard/Dockerfile
+++ b/services/leaderboard/Dockerfile
@@ -9,7 +9,9 @@ RUN \
   cd services/leaderboard && cargo install --locked --path .
 
 FROM rust:1.64-slim-buster
-WORKDIR /usr/src/app
+RUN useradd -m app
+USER app:1000
+WORKDIR /home/app
 COPY --from=builder /usr/local/cargo/bin/oort_leaderboard_service /usr/local/bin/oort_leaderboard_service
 ENV PORT 8080
 ENV RUST_LOG info
