--- a/frontend/app/Cargo.toml
+++ b/frontend/app/Cargo.toml
@@ -46,6 +46,7 @@ sha2 = "0.10.2"
 qstring = "0.7.2"
 gloo-utils = "0.1.5"
 gloo-timers = "0.2.4"
+serde-wasm-bindgen = "0.4"
 
 [dependencies.web-sys]
 version = "0.3.57"
