--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -17,6 +17,7 @@ wasmer-compiler = { git = "https://github.com/wasmerio/wasmer", rev = "a3daf3d11
 wasmer-compiler-cranelift = { git = "https://github.com/wasmerio/wasmer", rev = "a3daf3d1130be9b04d95911f28efd56ad23ad3eb" }
 rand_seeder = { git = "https://github.com/rlane/seeder", rev = "c39e58447f7c236fb98579a5d46e5668b92a3245" }
 monaco = { git = "https://github.com/rlane/rust-monaco", rev = "09ff7c17ad31b1c0f94f8441c6f092050edbec95" }
+rayon = { path = "../rayno" }
 
 [profile.dev.package.'*']
 opt-level = 3
