--- a/shared/simulator/Cargo.toml
+++ b/shared/simulator/Cargo.toml
@@ -28,13 +28,13 @@ serde = { version = "1.0.137", features = ["derive"] }
 smartstring = "1.0.1"
 instant = "0.1.12"
 oort_api = { path = "../api" }
-wasmer = { version = "2.3.0", default-features = false }
-wasmer-compiler = { version = "2.3.0", features = ["universal_engine"] }
+wasmer = { version = "3.0.0-rc.1", default-features = false }
+wasmer-compiler = { version = "3.0.0-rc.1", features = [] }
 tar = "0.4.38"
 libflate = "1.2.0"
 
 [target.'cfg(target_arch = "x86_64")'.dependencies]
-wasmer-compiler-cranelift = { version = "2.3.0" }
+wasmer-compiler-cranelift = { version = "3.0.0-rc.1" }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 js-sys = "0.3.57"
