--- a/services/leaderboard/Cargo.toml
+++ b/services/leaderboard/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 oort_proto = { path = "../../shared/proto" }
 salvo = "0.36"
 salvo_extra = { version="0.36", features=["cors"] }
-tokio = { version = "1", features = ["macros", "process"] }
+tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "process"] }
 anyhow = "1.0"
 bytes = "1.1"
 log = "0.4.17"
@@ -19,3 +19,4 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json ="1.0"
 rand = "0.8.5"
 chrono = "0.4.22"
+serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
