--- a/shared/simulator/Cargo.toml
+++ b/shared/simulator/Cargo.toml
@@ -32,6 +32,7 @@ wasmer = { version = "3.0.0-rc.1", default-features = false }
 wasmer-compiler = { version = "3.0.0-rc.1", features = [] }
 tar = "0.4.38"
 libflate = "1.2.0"
+walrus = { version = "0.19.0", git = "https://github.com/scrtlabs/walrus", rev = "c5777d4" }
 
 [target.'cfg(target_arch = "x86_64")'.dependencies]
 wasmer-compiler-cranelift = { version = "3.0.0-rc.1" }
@@ -49,6 +50,7 @@ test-log = "0.2.10"
 env_logger = "0.9.0"
 serde_json = "1.0.81"
 approx = "0.5.1"
+wabt = "0.10.0"
 
 [features]
 default = ["sys"]
