--- a/services/leaderboard/Cargo.toml
+++ b/services/leaderboard/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 [dependencies]
 oort_proto = { path = "../../shared/proto" }
 oort_envelope = { path = "../../shared/envelope" }
+oort_code_encryption = { path = "../../shared/code_encryption" }
 salvo = "0.36"
 salvo_extra = { version="0.36", features=["cors"] }
 tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "process"] }
