--- a/services/compiler/Cargo.toml
+++ b/services/compiler/Cargo.toml
@@ -5,6 +5,7 @@ publish = false
 edition = "2021"
 
 [dependencies]
+oort_code_encryption = { path = "../../shared/code_encryption" }
 salvo = "0.36"
 salvo_extra = { version="0.36", features=["cors"] }
 tokio = { version = "1", features = ["macros", "process"] }
