--- a/shared/code_encryption/Cargo.toml
+++ b/shared/code_encryption/Cargo.toml
@@ -9,6 +9,7 @@ aes-gcm = { version = "0.10.1", features = ["std"] }
 anyhow = "1.0.68"
 base64 = "0.21.0"
 bincode = "1.3.3"
+flate2 = "1.0.25"
 rand = "0.8.5"
 serde = "1.0.152"
 sha2 = "0.10.6"
