--- a/tools/Cargo.toml
+++ b/tools/Cargo.toml
@@ -26,6 +26,7 @@ petname = "1.1.2"
 rand = "0.8.5"
 rand_chacha = "0.3.1"
 rand_seeder = "0.2.3"
+rusqlite = { version = "0.28.0", features = ["bundled"] }
 
 [patch.crates-io]
 rand_seeder = { git = "https://github.com/rlane/seeder", rev = "c39e58447f7c236fb98579a5d46e5668b92a3245" }
