--- a/services/telemetry/Cargo.toml
+++ b/services/telemetry/Cargo.toml
@@ -19,3 +19,4 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json ="1.0"
 rand = "0.8.5"
 chrono = "0.4.22"
+reqwest = { version = "0.11.14", default-features=false, features = ["json", "rustls-tls"] }
