--- a/services/leaderboard/Cargo.toml
+++ b/services/leaderboard/Cargo.toml
@@ -21,4 +21,4 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json ="1.0"
 rand = "0.8.5"
 chrono = "0.4.22"
-serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
+reqwest = { version = "0.11.14", default-features=false, features = ["json", "rustls-tls"] }
