--- a/tools/Cargo.toml
+++ b/tools/Cargo.toml
@@ -30,6 +30,8 @@ rusqlite = { version = "0.28.0", features = ["bundled"] }
 anyhow = "1.0.68"
 shell-words = "1.1.0"
 toml = "0.7.0"
+indicatif = { version = "0.17.3", features = ["tokio"] }
+once_cell = "1.17.0"
 
 [patch.crates-io]
 rand_seeder = { git = "https://github.com/rlane/seeder", rev = "c39e58447f7c236fb98579a5d46e5668b92a3245" }
