--- a/shared/Cargo.toml
+++ b/shared/Cargo.toml
@@ -24,8 +24,8 @@ opt-level = 0
 
 [profile.release]
 debug = true
-lto = true
+lto = "thin"
 
 [profile.bench]
 debug = true
-lto = false
+lto = "thin"
