--- a/tools/Cargo.toml
+++ b/tools/Cargo.toml
@@ -14,7 +14,7 @@ serde = { version = "1.0", features = ["derive"] }
 tokio = { version = "1.20", features = ["full"] }
 log = "0.4.17"
 env_logger = "0.9.0"
-reqwest = "0.11.11"
+reqwest = { version = "0.11.11", features = ["json"] }
 rayon = "1.5.3"
 serde_json = "1.0"
 chrono = "0.4.22"
