--- a/frontend/analyzer_worker/Cargo.toml
+++ b/frontend/analyzer_worker/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 publish = false
 
 [dependencies]
+oort_proto = { path = "../../shared/proto" }
 console_error_panic_hook = "0.1.7"
 console_log = "0.2.0"
 instant = { version = "0.1", features = ["wasm-bindgen"] }
