--- a/tools/Cargo.toml
+++ b/tools/Cargo.toml
@@ -14,7 +14,7 @@ serde = { version = "1.0", features = ["derive"] }
 tokio = { version = "1.20", features = ["full"] }
 log = "0.4.17"
 env_logger = "0.9.0"
-reqwest = { version = "0.11.11", features = ["json"] }
+reqwest = { version = "0.11.11", features = ["json", "blocking"] }
 rayon = "1.5.3"
 serde_json = "1.0"
 chrono = "0.4.22"
@@ -31,6 +31,9 @@ shell-words = "1.1.0"
 toml = "0.7.0"
 indicatif = { version = "0.17.3", features = ["tokio"] }
 once_cell = "1.17.0"
+regex = "1.7.1"
+rand = "0.8.5"
+metaheuristics-nature = { version = "8.0.4", features = ["clap", "rayon"] }
 
 [patch.crates-io]
 rand_seeder = { git = "https://github.com/rlane/seeder", rev = "c39e58447f7c236fb98579a5d46e5668b92a3245" }
