--- a/shared/simulator/Cargo.toml
+++ b/shared/simulator/Cargo.toml
@@ -29,6 +29,7 @@ wasmer = { version = "3.0.0-rc.1", default-features = false }
 tar = "0.4.38"
 libflate = "1.2.0"
 walrus = { version = "0.19.0", git = "https://github.com/scrtlabs/walrus", rev = "c5777d4" }
+bytes = { version = "1.4.0", features = ["serde"] }
 
 [target.'cfg(target_arch = "x86_64")'.dependencies]
 wasmer-compiler-cranelift = { version = "3.0.0-rc.1" }
@@ -52,6 +53,7 @@ wabt = "0.10.0"
 default = ["sys"]
 sys = ["wasmer/sys-default"]
 js = ["wasmer/js", "wasmer/wat", "wasmer/std"]
+precompile = []
 
 [[bench]]
 name = "bullets"
